SWU-115 - Fixed the remaining layout issues
- Fixed mobile not sliding items correctly
- Fixed items on mobile not having their correct widths
- Fixed items on desktop not having their correct widths

--- a/swinburne-aem-prototype/source/sut/scss/_variables.scss
+++ b/swinburne-aem-prototype/source/sut/scss/_variables.scss
@@ -351,10 +351,3 @@ $btn-active-box-shadow:       null;
 $btn-border-radius:           3px;
 $btn-border-radius-lg:        $btn-border-radius;
 $btn-border-radius-sm:        $btn-border-radius;
-
-
-// Custom
-
-$list-item-margin:            15px;
-$list-item-md-margin:         20px;
-$list-item-lg-margin:         25px;
